# rentals_downtime

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  report.txt  team_plan.md  team_tasks.md
data/knowledge_base/: catboost_practical_notes.md  github_airbnb_baseline.md  kaggle_rental_baseline.md  leakage_and_split_rules.md  outliers_and_validation.md  proven_baseline_approach.md  review_host_feature_playbook.md  sources.json  spatial_feature_playbook.md  time_series_feature_engineering.md
src/rentals_agents/: __init__.py  benchmark.py  config.py  routing.py  state.py
src/rentals_agents/graph/: builder.py  nodes.py
src/rentals_agents/llm/: json_utils.py  ollama_client.py
src/rentals_agents/prompts/: system.py
src/rentals_agents/rag/: __init__.py  evaluation.py  knowledge_base.py  prompt_eval.py  retriever.py  service.py  vector_store.py
tests/: conftest.py  test_benchmark.py  test_executor_real.py  test_graph_smoke.py  test_rag.py  test_rag_prompt_eval.py  test_rag_vector.py  test_routing.py
