[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rentals-agents"
version = "0.1.0"
description = "LangGraph multi-agent pipeline for rental price prediction (HSE course)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]
rag = [
    "chromadb>=1.5.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]